dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/myd.c)
AM_INIT_AUTOMAKE(myd, 2.5)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.
AC_CHECK_LIB(ncurses, initscr, , AC_MSG_ERROR(not found.))

dnl Checks for header files.
AC_PATH_XTRA
  CFLAGS="$CFLAGS $X_CFLAGS"
  LIBS="$LIBS $X_LIBS -lX11"

AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_TYPE_SIGNAL

dnl 
AC_DEFINE(HOME_DIC_FILENAME, ".myd.dic")
AC_DEFINE(SYSTEM_DIC_PATH, PKGDATADIR "/myd.dic")

AC_OUTPUT(Makefile src/Makefile)
